--- a/estilos.css
+++ b/estilos.css
@@ -5,14 +5,22 @@
 }
 
 
-.portadatitulo{
+.portada{
     background-color: #AC0A22;
     color: white;
     padding: 10px;
+    height: 90vh;
+    background-image: url(/img/hd-hornet-of-hollow-knight-0elhmbnadxnvvrks.jpg);
+    background-size: cover;
+    background-position: center;
 }
 .portada-articulo{
     color: white;
     padding: 10px;
+    font-size: 1.1em;
+}
+.portada-parrafo{
+    background-color: rgb(38, 38, 70);
 }
 
 .requisitos h3{
@@ -21,7 +29,6 @@
 }
 
 footer{
-    background-color: #59240D;
     color: white;
     text-align: center;
     font-size: 1.2em;
