--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -151,20 +151,23 @@ footer{
     justify-content: space-evenly;
     align-content: center;
     justify-items: flex-start;
+
+    h3{
+        text-align: center;
+        padding: 5px;
+    }
 }
-.personajes1 img{
-    align-self: center;
-}
+
 .personajes1{
     width: 300px;
     margin: 20px 70px 40px;
     font-size: 25px;
     display: flex;
     flex-flow: column;
-}
-.listaPersonajes1 h3{
-    text-align: center;
-    padding: 5px;
+
+    img{
+        align-self: center;
+    }
 }
 
 
@@ -212,10 +215,11 @@ footer{
     padding: 20px;
     letter-spacing: 40px;
     font-size: 60px;
-}
-.icon-tienda a{
-    text-decoration: none;
-    color: white;
+
+    a{
+        text-decoration: none;
+        color: white;
+    }
 }
 
 .fa-playstation:hover{
@@ -240,12 +244,7 @@ footer{
     margin-bottom: 20px;
 }
 
-@media screen and (min-width:768px) {
-    .link-yt{
-        height: 500px;
-        width: 100%;
-    }
-}
+
 
 
 
@@ -263,11 +262,6 @@ footer{
     width: 100%;
 }
 
-@media only screen and (min-width:1140px){
-    .img-fluid{
-        height: 800px;
-    }
-}
 
 .galeriaCont{
     width: 100%;
@@ -340,6 +334,25 @@ footer{
 }
 .item16{
     background-image: url(/img/website_mini_0002_mini1.jpg);
+}
+
+
+
+
+/* ----------------------- MEDIA QUERIES --------------------------------------------- */
+
+
+@media screen and (min-width:768px) {
+    .link-yt{
+        height: 500px;
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width:1140px){
+    .img-fluid{
+        height: 800px;
+    }
 }
 
 @media screen and (min-width:960px){
