--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -25,7 +25,7 @@ body{
     color: white;
     padding: 10px;
     height: 90vh;
-    background-image: url(/img/hd-hornet-of-hollow-knight-0elhmbnadxnvvrks.jpg);
+    background-image: url(./img/hd-hornet-of-hollow-knight-0elhmbnadxnvvrks.jpg);
     background-size: cover;
     background-position: center;
 }
