links arreglados y ordenados

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,7 +22,7 @@ body {
   color: white;
   padding: 10px;
   height: 90vh;
-  background-image: url(/img/hd-hornet-of-hollow-knight-0elhmbnadxnvvrks.jpg);
+  background-image: url("../img/hd-hornet-of-hollow-knight-0elhmbnadxnvvrks.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -124,7 +124,7 @@ footer a:hover {
   color: white;
   padding: 10px;
   height: 90vh;
-  background-image: url(/img/dirtmaouth.jfif);
+  background-image: url(../img/dirtmaouth.jfif);
   background-size: cover;
   background-position: center;
 }
@@ -293,67 +293,67 @@ footer a:hover {
 }
 
 .item1 {
-  background-image: url(/img/1576341361_005563_1576341527_noticia_normal.jpg);
+  background-image: url(../img/1576341361_005563_1576341527_noticia_normal.jpg);
 }
 
 .item2 {
-  background-image: url(/img/City_of_Tears_Fountain_Square.jpeg.webp);
+  background-image: url(../img/City_of_Tears_Fountain_Square.jpeg.webp);
 }
 
 .item3 {
-  background-image: url(/img/d640f52c-eb50-480b-98d8-bd79b1e5be5f.jpg);
+  background-image: url(../img/d640f52c-eb50-480b-98d8-bd79b1e5be5f.jpg);
 }
 
 .item4 {
-  background-image: url(/img/dirtmaouth.jfif);
+  background-image: url(../img/dirtmaouth.jfif);
 }
 
 .item5 {
-  background-image: url(/img/Greenpath_2.webp);
+  background-image: url(../img/Greenpath_2.webp);
 }
 
 .item6 {
-  background-image: url(/img/Hollow-Knight---Nintendo-Switch.jfif);
+  background-image: url(../img/Hollow-Knight---Nintendo-Switch.jfif);
 }
 
 .item7 {
-  background-image: url(/img/hollow-knight-shackled.webp);
+  background-image: url(../img/hollow-knight-shackled.webp);
 }
 
 .item8 {
-  background-image: url(/img/hollow-knight-silksong-2731669.webp);
+  background-image: url(../img/hollow-knight-silksong-2731669.webp);
 }
 
 .item9 {
-  background-image: url(/img/hollow-knight-silksong-se-confirma-como-lanzamiento-de-xbox-games-pass-en-el-dia-uno.jpg);
+  background-image: url(../img/hollow-knight-silksong-se-confirma-como-lanzamiento-de-xbox-games-pass-en-el-dia-uno.jpg);
 }
 
 .item10 {
-  background-image: url(/img/hollow-knight-TEST.jpg);
+  background-image: url(../img/hollow-knight-TEST.jpg);
 }
 
 .item11 {
-  background-image: url(/img/imgsteam.jpg);
+  background-image: url(../img/imgsteam.jpg);
 }
 
 .item12 {
-  background-image: url(/img/radiancepic.jpg);
+  background-image: url(../img/radiancepic.jpg);
 }
 
 .item13 {
-  background-image: url(/img/Screenshot_HK_The_Pale_King_05.webp);
+  background-image: url(../img/Screenshot_HK_The_Pale_King_05.webp);
 }
 
 .item14 {
-  background-image: url(/img/ss_0a6eebaf5ade7dbd1dcffcc108d6b5dca68373f3.1920x1080.jpg);
+  background-image: url(../img/ss_0a6eebaf5ade7dbd1dcffcc108d6b5dca68373f3.1920x1080.jpg);
 }
 
 .item15 {
-  background-image: url(/img/ss_4c9cc3320086b199da64a4283f45ff41fe873d5e.1920x1080.jpg);
+  background-image: url(../img/ss_4c9cc3320086b199da64a4283f45ff41fe873d5e.1920x1080.jpg);
 }
 
 .item16 {
-  background-image: url(/img/website_mini_0002_mini1.jpg);
+  background-image: url(../img/website_mini_0002_mini1.jpg);
 }
 
 /* ----------------------- MEDIA QUERIES --------------------------------------------- */
