--- a/css/estilos.css
+++ b/css/estilos.css
@@ -199,10 +199,6 @@ footer a:hover {
   font-size: 1.2em;
 }
 
-.card-text {
-  font-size: 1.2em;
-}
-
 .btn {
   font-size: 0.7em;
 }
@@ -272,8 +268,8 @@ footer a:hover {
   width: 100%;
   height: auto;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(8, 250px);
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(16, 250px);
   grid-gap: 20px;
   padding: 10px;
 }
@@ -372,5 +368,18 @@ footer a:hover {
   .galeriaCont {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 250px);
+  }
+}
+@media screen and (min-width: 520px) and (max-width: 959px) {
+  .galeriaCont {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(8, 250px);
+  }
+}
+@media screen and (max-width: 540px) {
+  .acordion {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
   }
 }/*# sourceMappingURL=estilos.css.map */
